--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing con Video y Redirección</title>
+    <title>Landing con Video </title>
     <style>
         body, html {
             margin: 0;
@@ -56,8 +56,8 @@
         const redirectMessage = document.getElementById('redirect-message');
         const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const videoURL = 'tu video-aqui-url'; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
-        const iframeCode = 'https://drive.google.com/file/d/164McffgEZCvCQg126MzOUkNVjzaYfVq7/view?usp=drivesdk'; // Si prefieres usar un iframe, pega el código aquí
+        const videoURL = 'https://drive.google.com/file/d/164McffgEZCvCQg126MzOUkNVjzaYfVq7/view?usp=drivesdk'; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
+        const iframeCode = '  '; // Si prefieres usar un iframe, pega el código aquí
 
         let countdown = 5;
         let countdownInterval;
