--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         const redirectMessage = document.getElementById('redirect-message');
         const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const videoURL = 'https://drive.google.com/file/d/164McffgEZCvCQg126MzOUkNVjzaYfVq7/view?usp=drivesdk'; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
+        const videoURL = 'https://drive.google.com/file/d/164McffgEZCvCQg126MzOUkNVjzaYfVq7/preview'; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
         const iframeCode = '  '; // Si prefieres usar un iframe, pega el código aquí
 
         let countdown = 5;
