--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         const redirectMessage = document.getElementById('redirect-message');
         const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const videoURL = 'https://drive.google.com/file/d/164McffgEZCvCQg126MzOUkNVjzaYfVq7/preview'; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
-        const iframeCode = '  '; // Si prefieres usar un iframe, pega el código aquí
+        const videoURL = ''; // Reemplaza con la URL de tu video (ej: YouTube, Vimeo directo)
+        const iframeCode = ' <iframe src="https://drive.google.com/file/d/126hZfbQsgJcZmTnP1xBqnIuovIjQKhig/preview" width="640" height="480" allow="autoplay"></iframe> '; // Si prefieres usar un iframe, pega el código aquí
 
         let countdown = 5;
         let countdownInterval;
