--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
     <div id="redirect-message" style="display: none;">
-        Serás redirigido en <span id="countdown">7</span> segundos...
+         <span id="countdown">7</span> segundos...
     </div>
 
     <script>
