--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         const redirectMessage = document.getElementById('redirect-message');
         const mainImage = document.getElementById('main-image');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const imageURL = 'URL_DE_TU_IMAGEN_AQUI'; // Reemplaza con la URL de tu imagen
+        const imageURL = 'https://drive.google.com/file/d/10I0oVgo4tMzKgQtF_cvmUVRcakDO3TxW/view?usp=drivesdk'; // Reemplaza con la URL de tu imagen
 
         function redirectToURL() {
             window.location.href = redirectURL;
