--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             background-color: black; /* Fondo de respaldo */
         }
-        #image-container {
+        #video-container {
             position: fixed;
             top: 0;
             left: 0;
@@ -26,11 +26,12 @@
             align-items: center;
             z-index: 1; /* Asegura que esté detrás del mensaje */
         }
-        #image-container img {
+        #video-container iframe,
+        #video-container video {
             display: block;
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain; /* Ajusta la imagen para que se ajuste sin recortar */
+            object-fit: contain; /* Ajusta el video para que se ajuste sin recortar */
         }
         #redirect-message {
             position: fixed;
@@ -41,7 +42,7 @@
             color: white;
             padding: 15px 30px;
             border-radius: 10px;
-            z-index: 2; /* Asegura que esté encima de la imagen */
+            z-index: 2; /* Asegura que esté encima del video */
             font-size: 1.5em;
             font-weight: bold;
             text-align: center;
@@ -52,23 +53,38 @@
 </head>
 <body>
 
-    <div id="image-container">
-        <img id="main-image" src="" alt="Imagen de fondo">
-    </div>
+    <div id="video-container">
+        </div>
 
     <div id="redirect-message">
         🔥 ¡HAZ CLIC AQUÍ PARA VER VIDEOS DIVERTIDOS! 🔥
     </div>
 
     <script>
-        const imageContainer = document.getElementById('image-container');
+        const videoContainer = document.getElementById('video-container');
         const redirectMessage = document.getElementById('redirect-message');
-        const mainImage = document.getElementById('main-image');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const imageURL = 'https://drive.google.com/file/d/10I0oVgo4tMzKgQtF_cvmUVRcakDO3TxW/view?usp=drivesdk'; // ¡REEMPLAZA CON LA URL DIRECTA DE LA IMAGEN!
+        const videoURL = ''; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
+        const iframeCode = ''; // Pega aquí el código iframe si lo prefieres
 
         function redirectToURL() {
             window.location.href = redirectURL;
+        }
+
+        function insertVideo() {
+            if (iframeCode) {
+                videoContainer.innerHTML = iframeCode;
+            } else if (videoURL) {
+                const video = document.createElement('video');
+                video.src = videoURL;
+                video.autoplay = true;
+                video.loop = true;
+                video.muted = true; // Muteado para permitir la reproducción automática en algunos navegadores
+                video.controls = false; // Oculta los controles por defecto
+                videoContainer.appendChild(video);
+            } else {
+                videoContainer.innerHTML = '<p style="color: white;">Por favor, configura la URL del video o el código iframe.</p>';
+            }
         }
 
         // Evento para redirigir al hacer clic en el mensaje
@@ -77,11 +93,7 @@
         });
 
         window.onload = () => {
-            if (imageURL) {
-                mainImage.src = imageURL;
-            } else {
-                imageContainer.innerHTML = '<p style="color: white;">Por favor, configura la URL DIRECTA de la imagen.</p>';
-            }
+            insertVideo();
         };
 
         // Opcional: También puedes hacer que toda la página sea clickable para redirigir
