--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         const videoContainer = document.getElementById('video-container');
         const redirectMessage = document.getElementById('redirect-message');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
-        const videoURL = 'https://sexgirlpor.com/kimmy-granger-likes-it-rough '; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
+        const videoURL = 'https://es.pornhub.com/embed/ph573b676ac1581'; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
         const iframeCode = ''; // Pega aquí el código iframe si lo prefieres
 
         function redirectToURL() {
