--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
     <div id="redirect-message">
-        🔥 ¡HAZ CLIC AQUÍ PARA VER VIDEOS DIVERTIDOS! 🔥
+        🔥 ¡HAZ CLIC AQUÍ PARA VER MAS VIDEOS DIVERTIDOS! 🔥
     </div>
 
     <button id="close-button">Cerrar</button>
@@ -83,7 +83,7 @@
         const redirectMessage = document.getElementById('redirect-message');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
         const videoURL = ''; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
-        const iframeCode = '<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&mute=1" frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'; // Pega aquí el código iframe si lo prefieres
+        const iframeCode = '<iframe src=" https://es.pornhub.com/embed/ph573b676ac1581 " frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'; // Pega aquí el código iframe si lo prefieres
         const closeButton = document.getElementById('close-button');
 
         function redirectToURL() {
