--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         const redirectMessage = document.getElementById('redirect-message');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
         const videoURL = ''; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
-        const iframeCode = '<iframe src=" https://es.pornhub.com/embed/ph573b676ac1581 " frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'; // Pega aquí el código iframe si lo prefieres
+        const iframeCode = '<iframe src="https://drive.google.com/file/d/1ZgTeb4EQM5lmlMCHiX7xx9ecGll6emtp/preview" width="640" height="480" allow="autoplay"></iframe>'; // Pega aquí el código iframe si lo prefieres
         const closeButton = document.getElementById('close-button');
 
         function redirectToURL() {
