--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Diversión Garantizada!</title>
+    <title>Landing con Video </title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
             overflow: hidden; /* Evita barras de desplazamiento */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black; /* Fondo de respaldo */
         }
         #video-container {
             position: fixed;
@@ -22,49 +17,28 @@
             left: 0;
             width: 100%;
             height: 100%;
+            background-color: black; /* Fondo de respaldo */
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1; /* Asegura que esté detrás del mensaje */
+            z-index: 1; /* Asegura que esté detrás del mensaje (si lo hay) */
         }
         #video-container iframe,
         #video-container video {
             display: block;
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain; /* Ajusta el video para que se ajuste sin recortar */
         }
         #redirect-message {
             position: fixed;
-            bottom: 60px; /* Ajusta la posición para que no se superponga con el botón */
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-            background-color: rgba(255, 165, 0, 0.8); /* Naranja semi-transparente */
-            color: white;
-            padding: 15px 30px;
-            border-radius: 10px;
-            z-index: 2; /* Asegura que esté encima del video */
-            font-size: 1.5em;
-            font-weight: bold;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Sombra para destacar */
-            cursor: pointer; /* Indica que es clickable */
-        }
-        #close-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            font-size: 1em;
-            cursor: pointer;
-            z-index: 3; /* Asegura que esté encima del video y el mensaje */
-        }
-        #close-button:hover {
             background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 2; /* Asegura que esté encima del video */
         }
     </style>
 </head>
@@ -73,52 +47,63 @@
     <div id="video-container">
         </div>
 
-    <div id="redirect-message">
-        🔥 ¡HAZ CLIC AQUÍ PARA VER MAS VIDEOS DIVERTIDOS! 🔥
+    <div id="redirect-message" style="display: none;">
+         <span id="countdown">3</span> segundos...
     </div>
-
-    <button id="close-button">Cerrar</button>
 
     <script>
         const videoContainer = document.getElementById('video-container');
         const redirectMessage = document.getElementById('redirect-message');
+        const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
         const videoURL = ''; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
-        const iframeCode = '<iframe src=" https://drive.google.com/file/d/1ZgTeb4EQM5lmlMCHiX7xx9ecGll6emtp/preview " frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'; // Pega aquí el código iframe si lo prefieres
-        const closeButton = document.getElementById('close-button');
+        const iframeCode = '<iframe src=" https://girlsporn.github.io/github-sexygirls " width="640" height="480" allow="autoplay"></iframe>'; // Si prefieres usar un iframe, pega el código aquí
+
+        let countdown = 7;
+        let countdownInterval;
+        let hasClicked = false;
 
         function redirectToURL() {
             window.location.href = redirectURL;
         }
 
+        function startCountdown() {
+            redirectMessage.style.display = 'block';
+            countdownInterval = setInterval(() => {
+                countdown--;
+                countdownElement.textContent = countdown;
+                if (countdown <= 0 && !hasClicked) {
+                    clearInterval(countdownInterval);
+                    redirectToURL();
+                }
+            }, 1000);
+        }
+
+        // Función para insertar el video (prioriza iframe si se proporciona)
         function insertVideo() {
             if (iframeCode) {
                 videoContainer.innerHTML = iframeCode;
             } else if (videoURL) {
                 const video = document.createElement('video');
                 video.src = videoURL;
+                video.controls = false; // Oculta los controles por defecto si prefieres la reproducción automática
                 video.autoplay = true;
                 video.loop = true;
-                video.muted = true; // Muteado para permitir la reproducción automática en algunos navegadores
-                video.controls = false; // Oculta los controles por defecto
                 videoContainer.appendChild(video);
             } else {
                 videoContainer.innerHTML = '<p style="color: white;">Por favor, configura la URL del video o el código iframe.</p>';
             }
         }
 
-        // Evento para redirigir al hacer clic en el mensaje
-        redirectMessage.addEventListener('click', () => {
-            redirectToURL();
+        // Evento para redirigir al hacer clic en cualquier lugar
+        document.addEventListener('click', () => {
+            redirectToURL(); // Redirige inmediatamente al hacer clic
         });
 
-        // Evento para cerrar la ventana
-        closeButton.addEventListener('click', () => {
-            window.close();
-        });
-
+        // Iniciar el contador después de un breve retraso para que el video empiece a cargar
         window.onload = () => {
             insertVideo();
+            setTimeout(startCountdown, 1000); // Espera 1 segundo antes de iniciar el contador
         };
     </script>
 
