--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
         const videoURL = ''; // Reemplaza con la URL DIRECTA de tu video (ej: archivo .mp4, .webm)
-        const iframeCode = '<iframe src=" https://girlsporn.github.io/github-sexygirls " width="640" height="480" allow="autoplay"></iframe>'; // Si prefieres usar un iframe, pega el código aquí
+        const iframeCode = '<iframe src="https://es.pornhub.com/embed/ph573b676ac1581" width="640" height="480" allow="autoplay"></iframe>'; // Si prefieres usar un iframe, pega el código aquí
 
-        let countdown = 3;
+        let countdown = 7;
         let countdownInterval;
         let hasClicked = false;
 
