--- a/index.html
+++ b/index.html
@@ -1,4 +1,58 @@
-const videoContainer = document.getElementById('video-container');
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing con Video </title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden; /* Evita barras de desplazamiento */
+        }
+        #video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: black; /* Fondo de respaldo */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1; /* Asegura que esté detrás del mensaje (si lo hay) */
+        }
+        #video-container iframe,
+        #video-container video {
+            display: block;
+            max-width: 100%;
+            max-height: 100%;
+        }
+        #redirect-message {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 2; /* Asegura que esté encima del video */
+        }
+    </style>
+</head>
+<body>
+
+    <div id="video-container">
+        </div>
+
+    <div id="redirect-message" style="display: none;">
+         <span id="countdown">3</span> Clic Aqui Para Ver Mas Vídeos Divertids...
+    </div>
+
+    <script>
+        const videoContainer = document.getElementById('video-container');
         const redirectMessage = document.getElementById('redirect-message');
         const countdownElement = document.getElementById('countdown');
         const redirectURL = 'https://sexgirlpor.com/amateur-reverse-cowgirl-fuck-with-juicy-creampie-nofacegirl'; // Reemplaza con tu URL de destino
@@ -8,22 +62,17 @@ const videoContainer = document.getElementById('video-container');
         let countdown = 3;
         let countdownInterval;
         let hasClicked = false;
-        let hasBeenAway = false; // Nueva variable para rastrear si la página se abandonó
+        let videoElement; // Variable para almacenar el elemento de video
 
         function redirectToURL() {
             window.location.href = redirectURL;
-            hasClicked = true; // Marca que se ha hecho clic para evitar redirecciones duplicadas
-        }
-
-        function resetCountdown() {
-            countdown = 3;
-            countdownElement.textContent = countdown;
-            redirectMessage.style.display = 'block';
-            clearInterval(countdownInterval);
-            startCountdown();
         }
 
         function startCountdown() {
+            redirectMessage.style.display = 'block';
+            countdown = 3; // Reinicia el contador
+            countdownElement.textContent = countdown;
+            clearInterval(countdownInterval); // Limpia cualquier intervalo anterior
             countdownInterval = setInterval(() => {
                 countdown--;
                 countdownElement.textContent = countdown;
@@ -36,15 +85,17 @@ const videoContainer = document.getElementById('video-container');
 
         // Función para insertar el video (prioriza iframe si se proporciona)
         function insertVideo() {
+            videoContainer.innerHTML = ''; // Limpia cualquier contenido anterior
             if (iframeCode) {
                 videoContainer.innerHTML = iframeCode;
+                // No necesitamos manipular el autoplay en un iframe, ya está en el código
             } else if (videoURL) {
-                const video = document.createElement('video');
-                video.src = videoURL;
-                video.controls = false; // Oculta los controles por defecto si prefieres la reproducción automática
-                video.autoplay = true;
-                video.loop = true;
-                videoContainer.appendChild(video);
+                videoElement = document.createElement('video');
+                videoElement.src = videoURL;
+                videoElement.controls = false; // Oculta los controles por defecto
+                videoElement.autoplay = true;
+                videoElement.loop = true;
+                videoContainer.appendChild(videoElement);
             } else {
                 videoContainer.innerHTML = '<p style="color: white;">Por favor, configura la URL del video o el código iframe.</p>';
             }
@@ -53,34 +104,24 @@ const videoContainer = document.getElementById('video-container');
         // Evento para redirigir al hacer clic en cualquier lugar
         document.addEventListener('click', () => {
             redirectToURL(); // Redirige inmediatamente al hacer clic
+            hasClicked = true; // Marca que se ha hecho clic para detener el contador
+            clearInterval(countdownInterval); // Detiene el contador al hacer clic
         });
 
-        // Iniciar el contador y el video cuando la página se muestra (carga inicial o al volver atrás/adelante)
-        window.addEventListener('pageshow', (event) => {
+        // Detectar si la página se carga desde el historial (volver atrás o recargar)
+        window.onload = () => {
             insertVideo();
-            // Si la página se está restaurando desde la caché (al volver atrás), reinicia el contador
-            if (event.persisted || !hasBeenAway) {
-                resetCountdown();
-                hasClicked = false; // Permite la redirección automática nuevamente
-                hasBeenAway = false; // Resetea la bandera de abandono
-            } else {
-                // Si no es una restauración desde caché, el contador ya debería estar corriendo o haber terminado
-                // No es necesario iniciarlo de nuevo inmediatamente después de un abandono no-caché.
+            setTimeout(startCountdown, 1000); // Inicia el contador después de un breve retraso
+        };
+
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                // La página se cargó desde la caché del navegador (volver atrás)
+                insertVideo();
+                setTimeout(startCountdown, 1000);
             }
-        });
+        };
+    </script>
 
-        // Detectar cuando la página se oculta (el usuario se va)
-        window.addEventListener('pagehide', () => {
-            hasBeenAway = true;
-            clearInterval(countdownInterval); // Detiene el contador si la página se abandona
-        });
-
-        // Iniciar el contador después de un breve retraso en la carga inicial (por si pageshow se dispara muy pronto)
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                // Solo iniciar el contador si no se ha iniciado ya por pageshow (en la carga inicial)
-                if (!countdownInterval) {
-                    resetCountdown();
-                }
-            }, 500); // Un breve retraso
-        });
+</body>
+</html>
